[2022.11.20]
- Updated loading of stubs from .yml files. An 'id' field should now ALWAYS be set, whereas it was automatically generated beforehand if it was not set (which caused some non stub files to get parsed as stub with weird behavior) (https://github.com/dukeofharen/httplaceholder/pull/284).
- Added CancellationToken support to .NET client (https://github.com/dukeofharen/httplaceholder/pull/284).
- Detect light or dark theme from the users browser when opening the user interface (https://github.com/dukeofharen/httplaceholder/pull/284).
- Lots of refactorings in the C# code base (https://github.com/dukeofharen/httplaceholder/pull/284).
- The loading ring in the UI is now visible in both light and dark themes in the UI (https://github.com/dukeofharen/httplaceholder/pull/284).
- Log application startup time (https://github.com/dukeofharen/httplaceholder/pull/285).
- Make it possible to update settings through API (only "storeResponses" for now) (https://github.com/dukeofharen/httplaceholder/pull/286).
- Added option to set "storeResponses" in UI (https://github.com/dukeofharen/httplaceholder/pull/286).
- Fixed bug where a lot of file watches were placed which were not necessary (https://github.com/dukeofharen/httplaceholder/pull/289).
- Fixed small issue where explicitly defined response header would be overwritten when using the reverse proxy functionality (https://github.com/dukeofharen/httplaceholder/pull/290).
- Added better error handling for the reverse proxy response writer (https://github.com/dukeofharen/httplaceholder/pull/291).
- Fixed small bug where form helper would not close correctly in "Add request / response value" menu (https://github.com/dukeofharen/httplaceholder/pull/292).
- Fixed small bug in reverse proxy response writer where root URL would be replaced incorrectly (https://github.com/dukeofharen/httplaceholder/pull/292).