@@ -1,7 +1,7 @@
 variables:
   DEBIAN_IMAGE: debian:stable-slim
   PWSH_IMAGE: mcr.microsoft.com/powershell:latest
-  DOTNET_IMAGE: mcr.microsoft.com/dotnet/sdk:6.0
+  DOTNET_IMAGE: mcr.microsoft.com/dotnet/sdk:7.0
   NODE_IMAGE: node:lts-stretch-slim
   DOCKER_IMAGE: docker:latest
   PYTHON_IMAGE: python:slim-bullseye
