@@ -4,7 +4,7 @@
     <Version>2019.8.24.1234</Version>
     <AssemblyVersion>2019.8.24.1234</AssemblyVersion>
     <FileVersion>2019.8.24.1234</FileVersion>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <LangVersion>latest</LangVersion>
     <Configurations>Debug;Release;Tool</Configurations>
   </PropertyGroup>
@@ -13,7 +13,7 @@
     <WarningsAsErrors />
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="6.0.10" />
+    <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="7.0.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\HttPlaceholder\HttPlaceholder.csproj" />
